# fjalar_firmware_gungnir_blue

./: .editorconfig  .gitignore  README.md  aesir.h  bajs.txt  faraday.h  red.h  schema.proto  schema_generate.sh
application/flight_controller/: CMakeLists.txt  Kconfig  preferences.conf  prj.conf
application/flight_controller/boards/: fjalar.conf  fjalar.overlay  fjalar_hil.conf  fjalar_hil.overlay  native_sim.conf  native_sim.overlay
application/flight_controller/modules/dummysensor/drivers/sensor/dummysensor/: Kconfig  dummysensor.c
application/flight_controller/modules/dummysensor/drivers/sensor/dummysensor/data/: aesir.h  asat.h  astg.h  convert.py
application/flight_controller/modules/hilsensor/: CMakeLists.txt  Kconfig  hilsensor.c  hilsensor.h
application/flight_controller/modules/hilsensor/dts/bindings/sensor/: aesir,hilsensor.yaml
application/flight_controller/src/: actuation.c  actuation.h  actuationcopy.c  aerodynamics.c  aerodynamics.h  can_com.c  can_com.h  com_master.c  commands.c  commands.h  communication.c  communication.h  control.c  control.h  filter.c  filter.h  fjalar.h  flight_state.c  flight_state.h  init.c  init.h  logger.c  logger.h  lora_test.c  main.c  melodies.h  sensors.c  sensors.h  test_can.c  test_nvs.c  test_state_machine.c  test_telem.c
application/flight_controller/src/com_interfaces/: com_flash.h  com_lora.c  com_uart.h  com_usb.c
application/flight_controller/src/external_communication/: com_can.c  com_can.h  com_flash.c  com_flash.h  com_lora.c  com_lora.h  com_master.c  com_master.h  com_uart.c  com_usb.c  com_usb.h
(+35 files in other folders)
